Fix scroll on safari. Minor adjustments to frontpage styles.

--- a/website/src/app/movie-view/movie-list/movie-list.component.css
+++ b/website/src/app/movie-view/movie-list/movie-list.component.css
@@ -113,7 +113,7 @@
   position: relative;
   flex-direction: column;
   align-self: center;
-  width: auto;
+  width: 100%;
   padding:25px 45px 15px 25px;
   background-color: #1E2339;
   z-index: 1;
@@ -130,7 +130,7 @@
   background-color: #1E2339;
   color: #FEFDFD;
   padding: 10px 15px;
-  margin:15px 0 5px 15px;
+  margin:15px 0 5px 0;
   height: 29px;
   min-width: 300px;
   max-width: 500px;
@@ -140,12 +140,6 @@
 .searchBar {
   display: flex;
   justify-content: center;
-}
-
-.form-check-input{
-  -webkit-appearance: checkbox;
-  -moz-appearance: checkbox;
-  appearance: checkbox;
 }
 
 .form-check-inline label {
@@ -164,7 +158,6 @@
 .inputYearTextField {
   text-align: center;
   color: rgba(254,253,253,0.4);
-  border: 0;
   border: 1px solid rgba(254,253,253,0.4);
   background-color: #1E2339;
   height: 25px;
@@ -224,9 +217,9 @@ img{
 mat-grid-tile {
   background: white;
   margin: 10px;
-  -webkit-box-shadow: 0px 4px 33px 0px rgba(0,0,0,0.75);
-  -moz-box-shadow: 0px 4px 33px 0px rgba(0,0,0,0.75);
-  box-shadow: 0px 4px 33px 0px rgba(0,0,0,0.75);
+  -webkit-box-shadow: 0px 6px 22px -2px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 6px 22px -2px rgba(0,0,0,0.75);
+  box-shadow: 0px 6px 22px -2px rgba(0,0,0,0.75);
 }
 mat-grid-tile:hover mat-grid-tile-footer{
   background-color: #34384c;
@@ -247,8 +240,9 @@ mat-grid-list {
 }
 
 #viewBtnWrap{
-  position: absolute;
-  bottom: 15px;
+  display: flex;
+  align-items: flex-end;
+  margin-bottom: 5px;
 }
 
 .viewGrid {
